feat: update build process and add GitHub Pages support
- Updated index.html to reference new asset files.
- Added postbuild script to create 404.html and .nojekyll for GitHub Pages.
- Modified package.json to include postbuild script in the build process.
- Set base path in vite.config.ts to support deployment configurations.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
+    "postbuild": "node scripts/postbuild.mjs",
     "preview": "vite preview --host",
     "lint": "eslint src --ext ts,tsx"
   },
